the main activity...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">CarForAll</string>
+    <string name="join_icon">join to our members</string>
 </resources>
