update design for main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">CarForAll</string>
     <string name="join_icon">join to our members</string>
+    <string name="car">Car</string>
+    <string name="fortxt">For</string>
+    <string name="all">All</string>
 </resources>
