--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,8 @@
     <string name="app_name">CarForAll</string>
     <string name="join_icon">join to our members</string>
     <string name="car">Car</string>
-    <string name="fortxt">For</string>
+    <string name="fortxt">F</string>
+    <string name="fortxt2">r</string>
     <string name="all">All</string>
     <string name="join">Join Our Members</string>
     <string name="addcar">Add Your Car</string>
@@ -17,4 +18,13 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
