--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,10 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="login">LOGIN</string>
+    <string name="username">UserName</string>
+    <string name="username2">username</string>
+    <string name="password">Password</string>
+    <string name="newUser">New User?</string>
+    <string name="signup">SignUp</string>
 </resources>
