--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,7 @@
     <string name="password">Password</string>
     <string name="newUser">New User?</string>
     <string name="signup">SignUp</string>
+    <string name="from">Fr</string>
+    <string name="from2">m</string>
+    <string name="to">To</string>
 </resources>
