--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,13 @@
     <string name="join">Join Our Members</string>
     <string name="addcar">Add Your Car</string>
     <string name="bookcar">Book A Car</string>
-    <string name="repaircar">Repair A Car</string>
     <string name="title_activity_car_form">carForm</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="report">Report</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_login">LoginActivity</string>
@@ -35,8 +34,25 @@
     <string name="signup">SignUp</string>
     <string name="from">Fr</string>
     <string name="from2">m</string>
-    <string name="to">To</string>
+    <string name="to">T</string>
     <string name="firstToast">youre signed in</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Filters">Filters:</string>
+    <string name="title_activity_ask_car">AskCar</string>
+    <string name="transmission">Transmission:</string>
+    <string name="m">M</string>
+    <string name="a">A</string>
+    <string name="Steptroinic">Steptroinic</string>
+    <string name="model">Model</string>
+    <string name="brand">Brand</string>
+    <string name="Registrationnumber">Registration number</string>
+    <string name="Buildyear">Build year</string>
+    <string name="PhoneNumber">Phone Number</string>
+    <string name="submit">Submit</string>
+    <string name="Return">Return The Car</string>
+    <string name="Return1">Return</string>
+    <string name="back">Back</string>
+    <string name="problem">Need to repair the car?</string>
+    <string name="kind">Kind Of The Repair:</string>
+    <string name="explain">Explain</string>
 </resources>
